tests/baselines/reference/nonNull.errors.txt
tests/cases/conformance/types/nonNull/nonNull.ts(23,38): error TS2536: Type 'K' cannot be used to index type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(71,8): error TS2345: Argument of type '{ a: null; }' is not assignable to parameter of type '{ a: {}; }'.
  Types of property 'a' are incompatible.
    Type 'null' is not assignable to type '{}'.
tests/cases/conformance/types/nonNull/nonNull.ts(75,11): error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(77,14): error TS2345: Argument of type '5' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(80,8): error TS2345: Argument of type 'null' is not assignable to parameter of type '{}'.
tests/cases/conformance/types/nonNull/nonNull.ts(81,8): error TS2345: Argument of type 'undefined' is not assignable to parameter of type '{}'.
tests/cases/conformance/types/nonNull/nonNull.ts(85,14): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(86,19): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(87,15): error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
tests/cases/conformance/types/nonNull/nonNull.ts(96,11): error TS2322: Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(102,11): error TS2322: Type 'T' is not assignable to type 'T!'.
  Type 'number | null' is not assignable to type 'T!'.
    Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(104,11): error TS2322: Type 'T' is not assignable to type 'number'.
  Type 'number | null' is not assignable to type 'number'.
    Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(113,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(116,11): error TS2322: Type 'T' is not assignable to type 'StrictMembers<T>'.
  Type 'T[K]' is not assignable to type 'T[K]!'.
    Type 'T[string]' is not assignable to type 'T[K]!'.
tests/cases/conformance/types/nonNull/nonNull.ts(120,11): error TS2322: Type 'T' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(121,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'StrictMembers<T!>'.
  Type 'keyof T!' is not assignable to type 'keyof T'.
tests/cases/conformance/types/nonNull/nonNull.ts(128,11): error TS2322: Type 'T' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(129,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'IdMapped<T!>'.
  Type 'keyof T!' is not assignable to type 'keyof T'.
tests/cases/conformance/types/nonNull/nonNull.ts(137,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'Partial<T!>'.
  Type 'keyof T!' is not assignable to type 'keyof T'.
tests/cases/conformance/types/nonNull/nonNull.ts(147,5): error TS2365: Operator '===' cannot be applied to types 'T!' and 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(173,11): error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => T'.
  Type '{}' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(177,11): error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => IdMapped<T>'.
  Type 'IdMapped<{}>' is not assignable to type 'IdMapped<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(178,11): error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(179,11): error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(182,11): error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => IdMapped<T!>'.
  Type '{}' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(184,11): error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T!>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(185,11): error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T!>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(204,11): error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => StrictMembers<T>'.
  Type '{}' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(205,11): error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(206,11): error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(207,11): error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(208,11): error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(209,11): error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'StrictMembers<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(212,11): error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type '{}' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(213,11): error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(214,11): error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(215,11): error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(216,11): error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(232,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(234,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
tests/cases/conformance/types/nonNull/nonNull.ts(246,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
tests/cases/conformance/types/nonNull/nonNull.ts(248,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
tests/cases/conformance/types/nonNull/nonNull.ts(260,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(262,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(267,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(269,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(283,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T'.
      Type 'null' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(285,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(297,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(299,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(310,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(311,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(312,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(313,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(317,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(318,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(319,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(320,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(334,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T'.
      Type 'null' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(336,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(348,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(350,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(361,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
      Type 'number' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(362,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(363,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(364,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(368,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
      Type 'number' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(369,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(370,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(371,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(388,11): error TS2322: Type 'B!' is not assignable to type '{ x: number; }'.
  Type '{ x: string; }' is not assignable to type '{ x: number; }'.
    Types of property 'x' are incompatible.
      Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(405,5): error TS2322: Type '3' is not assignable to type 'A!'.


==== tests/cases/conformance/types/nonNull/nonNull.ts (72 errors) ====
    type NonNull<T> = T!
    type IndexNullable<T, K extends keyof T!> = T![K]
    type NonNullableMember<T, K extends keyof T> = T[K]!
    type StrictMembers<T> = { [K in keyof T]: T[K]! }
    
    type FlipFlop<T> = StrictMembers<Partial<StrictMembers<T>>>
    
    type HasKey<T, Key extends string> = (
      { [K in keyof T]: 'true' } &
      { [key: string]: 'false' }
    )[Key]
    
    type HasKindKey<T> = HasKey<T!, 'kind'>
    type MapHasKey<T, Key extends string> = {
        [K in keyof T]: HasKey<T[K]!, Key>
    }
    
    type KeyOfBang<T> = keyof T!
    
    type Strip1<T> = { [K in keyof T!]: T![K] }
    type Strip2<T> = { [K in keyof T!]: T![K]! }
    
    type Error1<T, K extends keyof T!> = T[K]
                                         ~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T'.
    
    type StupidButOK<T>  = { [K in keyof T]: T![K] }
    type StupidButOK2<T> = { [K in keyof T]: T![K!] }  // FIXME
    
    type Obj = {
        x: number|null,
    
        z:   { kind: 'Just', value: string }
           | { kind: 'Nothing' }
           | undefined
    }
    
    type T1 = number!
    type T2 = (number|undefined)!
    type T3 = (number|null)!
    type T4 = NonNull<null|number>
    type T5 = NonNull<number|undefined>
    type T6 = NonNull<null>
    type T7 = NonNullableMember<Obj, 'x'>
    type T8 = IndexNullable<Obj|undefined, 'x'>
    type T9 = StrictMembers<Obj>
    type T10 = StrictMembers<Obj|undefined>
    type T11 = FlipFlop<Obj>
    type T12 = FlipFlop<number>
    type T13 = keyof (Obj|null)!
    type T14 = KeyOfBang<Obj|null>
    type T15 = Obj['z']!['kind']
    type T16 = MapHasKey<Obj, 'kind'>
    type T17 = Strip1<Obj>
    type T18 = Strip1<Obj|undefined>
    type T19 = Strip2<Obj|undefined>
    
    let a: string | undefined | null | never;
    let b: typeof a!;
    type Assert<T> = T!;
    let c: Assert<typeof a>;
    
    declare function infer1<T>(x: T): T!;
    infer1(null! as (number | undefined));
    
    declare function infer2<T>(x: { a: T }): T!;
    infer2(null! as { a: number | null });
    infer2(null! as { a: null });
    const res2: number|undefined = infer2(null! as { a: number });
    
    declare function infer3<T>(x: { a: T! }): T;
    infer3(null! as { a: number });  // FIXME
    infer3(null! as { a: null });    // FIXME
           ~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: null; }' is not assignable to parameter of type '{ a: {}; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type 'null' is not assignable to type '{}'.
    const res3: number|undefined = infer3(null! as { a: number });
    
    declare function infer4<T>(x: T, y: T!): void;
    infer4(5, null);
              ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
    infer4(5 as (number|null), 5);
    infer4(null, 5);  // FIXME      // should be number
                 ~
!!! error TS2345: Argument of type '5' is not assignable to parameter of type 'never'.
    
    declare function infer5<T>(x: T!): T;
    infer5(null);
           ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type '{}'.
    infer5(undefined);
           ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type '{}'.
    infer5(null as never);
    infer5(null as any);
    
    infer5<null>(null);
                 ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<undefined>(null);
                      ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<never>(null);
                  ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'never'.
    infer5<any>(null);
    
    declare function infer6<T>(x: Record<'x'|'y', T!>): void;
    infer6({ x: 1, y: 2 });           // FIXME
    infer6({ x: 1, y: 'string' });    // FIXME
    
    function assignability<T>(x: T, y: T!) {
        const a: T = y;
        const b: T! = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'T!'.
        const c: T! = y;
    }
    
    function assignability2<T extends number|null>(x: T, y: T!) {
        const a: T = y;
        const b: T! = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'T!'.
!!! error TS2322:   Type 'number | null' is not assignable to type 'T!'.
!!! error TS2322:     Type 'null' is not assignable to type 'T!'.
        const c: T! = y;
        const d: number = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'number'.
!!! error TS2322:   Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:     Type 'null' is not assignable to type 'number'.
        const e: number = y;
    }
    
    type IdMapped<T> = { [K in keyof T]: T[K] }
    
    function mappedAssignability<T>(x: T, y: StrictMembers<T>, z: StrictMembers<T!>) {
        const a: T = y;
        const b: T = z;     // FIXME
        const c: T! = y;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T!'.
        const d: T! = z;    // FIXME
    
        const e: StrictMembers<T> = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'StrictMembers<T>'.
!!! error TS2322:   Type 'T[K]' is not assignable to type 'T[K]!'.
!!! error TS2322:     Type 'T[string]' is not assignable to type 'T[K]!'.
        const f: StrictMembers<T> = y;
        const g: StrictMembers<T> = z;
    
        const h: StrictMembers<T!> = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'StrictMembers<T!>'.
        const i: StrictMembers<T!> = y;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'StrictMembers<T!>'.
!!! error TS2322:   Type 'keyof T!' is not assignable to type 'keyof T'.
        const j: StrictMembers<T!> = z;
    
        const k: IdMapped<T> = x;
        const l: IdMapped<T> = y;
        const m: IdMapped<T> = z;
    
        const n: IdMapped<T!> = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'IdMapped<T!>'.
        const o: IdMapped<T!> = y;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'IdMapped<T!>'.
!!! error TS2322:   Type 'keyof T!' is not assignable to type 'keyof T'.
        const p: IdMapped<T!> = z;
    
        const q: Partial<T> = x;
        const r: Partial<T> = y;
        const s: Partial<T> = z;
    
        const u: Partial<T!> = x; // FIXME
        const v: Partial<T!> = y;
              ~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'Partial<T!>'.
!!! error TS2322:   Type 'keyof T!' is not assignable to type 'keyof T'.
        const w: Partial<T!> = z;
    }
    
    function comparability<T>(x: T, y: T!, z: StrictMembers<T>, w: StrictMembers<T!>) {
        x === y;
        x === z;
        x === w;  // FIXME
    
        y === y;
        y === z;  // FIXME
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'T!' and 'StrictMembers<T>'.
        y === w;  // FIXME
    
        z === z;
        z === w;
    
        w === w;
    }
    
    function flags<A, B>(x: A|B|undefined, y: A!) {
        if (x === y) {
            // should be A!
            x;  // FIXME
        }
    }
    
    function signatures(
        f1: <T>() => T,
        f2: <T>() => T!,
        f3: <T>() => IdMapped<T>,
        f4: <T>() => IdMapped<T!>,
        f5: <T>() => Partial<T>,
        f6: <T>() => Partial<T!>,
        f7: <T>() => StrictMembers<T>,
        f8: <T>() => StrictMembers<T!>
    ) {
        const g12: typeof f1 = f2;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => T'.
!!! error TS2322:   Type '{}' is not assignable to type 'T'.
    
        const g21: typeof f2 = f1;  // FIXME
    
        const g34: typeof f3 = f4;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => IdMapped<T>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'IdMapped<T>'.
        const g37: typeof f3 = f7;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
        const g38: typeof f3 = f8;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
    
        const g41: typeof f4 = f1;  // FIXME
        const g42: typeof f4 = f2;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => IdMapped<T!>'.
!!! error TS2322:   Type '{}' is not assignable to type 'IdMapped<T!>'.
        const g43: typeof f4 = f3;  // FIXME
        const g47: typeof f4 = f7;
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T!>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
        const g48: typeof f4 = f8;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T!>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
    
        const g51: typeof f5 = f1;
        const g52: typeof f5 = f2;
        const g53: typeof f5 = f3;
        const g54: typeof f5 = f4;
        const g56: typeof f5 = f6;
        const g57: typeof f5 = f7;
        const g58: typeof f5 = f8;
    
        const g61: typeof f6 = f1;  // FIXME
        const g62: typeof f6 = f2;
        const g63: typeof f6 = f3;  // FIXME
        const g64: typeof f6 = f4;
        const g65: typeof f6 = f5;  // FIXME
        const g67: typeof f6 = f7;  // FIXME
        const g68: typeof f6 = f8;
    
        const g71: typeof f7 = f1;  // FIXME
        const g72: typeof f7 = f2;
              ~~~
!!! error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type '{}' is not assignable to type 'StrictMembers<T>'.
        const g73: typeof f7 = f3;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
        const g74: typeof f7 = f4;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
        const g75: typeof f7 = f5;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
        const g76: typeof f7 = f6;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
        const g78: typeof f7 = f8;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'StrictMembers<T>'.
    
        const g81: typeof f8 = f1;  // FIXME
        const g82: typeof f8 = f2;
              ~~~
!!! error TS2322: Type '<T>() => T!' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type '{}' is not assignable to type 'StrictMembers<T!>'.
        const g83: typeof f8 = f3;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g84: typeof f8 = f4;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g85: typeof f8 = f5;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g86: typeof f8 = f6;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g87: typeof f8 = f7;  // FIXME
    }
    
    type A<T>    = { a: T }
    type OptA<T> = { a: T | null }
    
    function knownTypes(
        a:          A<number>,
        optA:       OptA<number>,
        bangA:      A<number>!,
        bangOptA:   OptA<number>!,
        strictA:    StrictMembers<A<number>>,
        strictOptA: StrictMembers<OptA<number>>
    ) {
        const a1: A<number> = a;
        const a2: A<number> = optA;
              ~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const a3: A<number> = bangA;
        const a4: A<number> = bangOptA;
              ~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
        const a5: A<number> = strictA;
        const a6: A<number> = strictOptA;
    
        const oa1: OptA<number> = a;
        const oa2: OptA<number> = optA;
        const oa3: OptA<number> = bangA;
        const oa4: OptA<number> = bangOptA;
        const oa5: OptA<number> = strictA;
        const oa6: OptA<number> = strictOptA;
    
        const ba1: A<number>! = a;
        const ba2: A<number>! = optA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
        const ba3: A<number>! = bangA;
        const ba4: A<number>! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
        const ba5: A<number>! = strictA;
        const ba6: A<number>! = strictOptA;
    
        const boa1: OptA<number>! = a;
        const boa2: OptA<number>! = optA;
        const boa3: OptA<number>! = bangA;
        const boa4: OptA<number>! = bangOptA;
        const boa5: OptA<number>! = strictA;
        const boa6: OptA<number>! = strictOptA;
    
        const sa1: StrictMembers<A<number>> = a;
        const sa2: StrictMembers<A<number>> = optA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const sa3: StrictMembers<A<number>> = bangA;
        const sa4: StrictMembers<A<number>> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
        const sa5: StrictMembers<A<number>> = strictA;
        const sa6: StrictMembers<A<number>> = strictOptA;
    
        const soa1: StrictMembers<OptA<number>> = a;
        const soa2: StrictMembers<OptA<number>> = optA;
              ~~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const soa3: StrictMembers<OptA<number>> = bangA;
        const soa4: StrictMembers<OptA<number>> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
        const soa5: StrictMembers<OptA<number>> = strictA;
        const soa6: StrictMembers<OptA<number>> = strictOptA;
    }
    
    function unknownTypes<T>(
        a:          A<T>,
        optA:       OptA<T>,
        bangA:      A<T>!,
        bangOptA:   OptA<T>!,
        strictA:    StrictMembers<A<T>>,
        strictOptA: StrictMembers<OptA<T>>
    ) {
        const a1: A<T> = a;
        const a2: A<T> = optA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T'.
!!! error TS2322:       Type 'null' is not assignable to type 'T'.
        const a3: A<T> = bangA;
        const a4: A<T> = bangOptA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const a5: A<T> = strictA;
        const a6: A<T> = strictOptA;  // FIXME
    
        const oa1: OptA<T> = a;
        const oa2: OptA<T> = optA;
        const oa3: OptA<T> = bangA;
        const oa4: OptA<T> = bangOptA;
        const oa5: OptA<T> = strictA;
        const oa6: OptA<T> = strictOptA;
    
        const ba1: A<T>! = a;
        const ba2: A<T>! = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba3: A<T>! = bangA;
        const ba4: A<T>! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba5: A<T>! = strictA;
        const ba6: A<T>! = strictOptA;  // FIXME
    
        const boa1: OptA<T>! = a;
        const boa2: OptA<T>! = optA;
        const boa3: OptA<T>! = bangA;
        const boa4: OptA<T>! = bangOptA;
        const boa5: OptA<T>! = strictA;
        const boa6: OptA<T>! = strictOptA;
    
        const sa1: StrictMembers<A<T>> = a;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
        const sa2: StrictMembers<A<T>> = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const sa3: StrictMembers<A<T>> = bangA;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa4: StrictMembers<A<T>> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa5: StrictMembers<A<T>> = strictA;
        const sa6: StrictMembers<A<T>> = strictOptA;  // FIXME
    
        const soa1: StrictMembers<OptA<T>> = a;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
        const soa2: StrictMembers<OptA<T>> = optA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const soa3: StrictMembers<OptA<T>> = bangA;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa4: StrictMembers<OptA<T>> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa5: StrictMembers<OptA<T>> = strictA;
        const soa6: StrictMembers<OptA<T>> = strictOptA;
    }
    
    function extendsTypes<T extends number>(
        a:          A<T>,
        optA:       OptA<T>,
        bangA:      A<T>!,
        bangOptA:   OptA<T>!,
        strictA:    StrictMembers<A<T>>,
        strictOptA: StrictMembers<OptA<T>>
    ) {
        const a1: A<T> = a;
        const a2: A<T> = optA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T'.
!!! error TS2322:       Type 'null' is not assignable to type 'T'.
        const a3: A<T> = bangA;
        const a4: A<T> = bangOptA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const a5: A<T> = strictA;
        const a6: A<T> = strictOptA;  // FIXME
    
        const oa1: OptA<T> = a;
        const oa2: OptA<T> = optA;
        const oa3: OptA<T> = bangA;
        const oa4: OptA<T> = bangOptA;
        const oa5: OptA<T> = strictA;
        const oa6: OptA<T> = strictOptA;
    
        const ba1: A<T>! = a;
        const ba2: A<T>! = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba3: A<T>! = bangA;
        const ba4: A<T>! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba5: A<T>! = strictA;
        const ba6: A<T>! = strictOptA;  // FIXME
    
        const boa1: OptA<T>! = a;
        const boa2: OptA<T>! = optA;
        const boa3: OptA<T>! = bangA;
        const boa4: OptA<T>! = bangOptA;
        const boa5: OptA<T>! = strictA;
        const boa6: OptA<T>! = strictOptA;
    
        const sa1: StrictMembers<A<T>> = a;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
!!! error TS2322:       Type 'number' is not assignable to type 'T!'.
        const sa2: StrictMembers<A<T>> = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const sa3: StrictMembers<A<T>> = bangA;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa4: StrictMembers<A<T>> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa5: StrictMembers<A<T>> = strictA;
        const sa6: StrictMembers<A<T>> = strictOptA;  // FIXME
    
        const soa1: StrictMembers<OptA<T>> = a;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
!!! error TS2322:       Type 'number' is not assignable to type 'T!'.
        const soa2: StrictMembers<OptA<T>> = optA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const soa3: StrictMembers<OptA<T>> = bangA;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa4: StrictMembers<OptA<T>> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa5: StrictMembers<OptA<T>> = strictA;
        const soa6: StrictMembers<OptA<T>> = strictOptA;
    }
    
    function isNonNull<T>(x: T): x is T! {
        return x !== null;
    }
    
    function test<
        A extends number | null,
        B extends { x: string } | null,
        C extends { x: boolean | null } | null
    >(a: A!, b: B!, c: C, cBang: C!) {
        const d: number = a;
        const e: { x: string } = b;
        const f: { x?: string } = b;
        const g: { x: number } = b;
              ~
!!! error TS2322: Type 'B!' is not assignable to type '{ x: number; }'.
!!! error TS2322:   Type '{ x: string; }' is not assignable to type '{ x: number; }'.
!!! error TS2322:     Types of property 'x' are incompatible.
!!! error TS2322:       Type 'string' is not assignable to type 'number'.
    
        if (isNonNull(c)) {
            c;
            c.x;
            if (isNonNull(c.x)) {
                c.x;
            }
            if (c.x !== null) {
                c.x;
            }
        }
    
        if (isNonNull(cBang)) {
            cBang;
        }
    
        a = 3;
        ~
!!! error TS2322: Type '3' is not assignable to type 'A!'.
    }
    
    function f11<T>(x: A<T>!) {
        x.a;
    }
    